--- a/commons/src/main/res/values/colors.xml
+++ b/commons/src/main/res/values/colors.xml
@@ -11,14 +11,14 @@
     <color name="gradient_grey_start">#AA000000</color>
 
     <!-- Color Customization -->
-    <color name="theme_light_text_color">#FF6D6D6D</color>
-    <color name="theme_light_background_color">#FFFAFAFA</color>
-    <color name="theme_dark_text_color">#FFEDEDED</color>
-    <color name="theme_dark_background_color">#FF3F3F3F</color>
+    <color name="theme_light_text_color">@color/md_grey_700</color>
+    <color name="theme_light_background_color">@color/md_grey_200</color>
+    <color name="theme_dark_text_color">@color/md_grey_200</color>
+    <color name="theme_dark_background_color">@color/md_grey_800</color>
     <color name="default_text_color">@color/theme_light_text_color</color>
     <color name="default_background_color">@color/theme_light_background_color</color>
-    <color name="theme_solarized_background_color">#FF002B36</color>
-    <color name="theme_solarized_text_color">#FFB58900</color>
+    <color name="theme_solarized_background_color">@color/md_indigo_900</color>
+    <color name="theme_solarized_text_color">@color/md_amber_700</color>
     <color name="theme_solarized_primary_color">@color/md_indigo_800</color>
     <color name="theme_dark_red_primary_color">@color/md_red_700</color>
 
