make Solarized theme a bit darker

--- a/commons/src/main/res/values/colors.xml
+++ b/commons/src/main/res/values/colors.xml
@@ -17,9 +17,9 @@
     <color name="theme_dark_background_color">@color/md_grey_800</color>
     <color name="default_text_color">@color/theme_light_text_color</color>
     <color name="default_background_color">@color/theme_light_background_color</color>
-    <color name="theme_solarized_background_color">@color/md_indigo_900</color>
+    <color name="theme_solarized_background_color">@color/md_indigo_900_dark</color>
     <color name="theme_solarized_text_color">@color/md_amber_700</color>
-    <color name="theme_solarized_primary_color">@color/md_indigo_800</color>
+    <color name="theme_solarized_primary_color">@color/md_indigo_900</color>
     <color name="theme_dark_red_primary_color">@color/md_red_700</color>
 
     <!-- SwitchCompat -->
