--- a/commons/src/main/res/layout/activity_customization.xml
+++ b/commons/src/main/res/layout/activity_customization.xml
@@ -5,11 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/customization_holder"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:id="@+id/customization_theme_holder"
@@ -50,6 +49,7 @@
             android:id="@+id/customization_text_color_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/customization_theme_holder"
             android:layout_marginTop="@dimen/medium_margin"
             android:background="?attr/selectableItemBackground"
             android:padding="@dimen/activity_margin">
@@ -79,6 +79,7 @@
             android:id="@+id/customization_background_color_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/customization_text_color_holder"
             android:layout_marginTop="@dimen/medium_margin"
             android:background="?attr/selectableItemBackground"
             android:padding="@dimen/activity_margin">
@@ -108,6 +109,7 @@
             android:id="@+id/customization_primary_color_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/customization_background_color_holder"
             android:layout_marginTop="@dimen/medium_margin"
             android:background="?attr/selectableItemBackground"
             android:padding="@dimen/activity_margin">
@@ -132,5 +134,26 @@
                 android:clickable="false"/>
 
         </RelativeLayout>
-    </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/apply_to_all_holder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/customization_primary_color_holder"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/activity_margin"
+            android:background="?attr/selectableItemBackground">
+
+            <com.simplemobiletools.commons.views.MyTextView
+                android:id="@+id/apply_to_all"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_background"
+                android:clickable="false"
+                android:padding="@dimen/activity_margin"
+                android:text="@string/apply_to_all_apps"
+                android:textSize="@dimen/normal_text_size"/>
+
+        </RelativeLayout>
+    </RelativeLayout>
 </ScrollView>
