couple Shared theme improvements

--- a/commons/src/main/res/values/donottranslate.xml
+++ b/commons/src/main/res/values/donottranslate.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="simple_commons">Simple Commons</string>
     <string name="progress">%1$s / %2$s</string>
     <string name="empty"> </string>
     <string name="donate_url">http://simplemobiletools.com/donate</string>
