--- a/commons/src/main/res/layout/dialog_create_new_folder.xml
+++ b/commons/src/main/res/layout/dialog_create_new_folder.xml
@@ -21,6 +21,7 @@
         android:layout_marginBottom="@dimen/activity_margin"
         android:inputType="textCapSentences"
         android:singleLine="true"
-        android:textCursorDrawable="@null"/>
+        android:textCursorDrawable="@null"
+        android:textSize="@dimen/normal_text_size"/>
 
 </LinearLayout>
