--- a/commons/src/main/res/layout/dialog_rename_item.xml
+++ b/commons/src/main/res/layout/dialog_rename_item.xml
@@ -18,7 +18,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_margin"
         android:singleLine="true"
-        android:textCursorDrawable="@null"/>
+        android:textCursorDrawable="@null"
+        android:textSize="@dimen/normal_text_size"/>
 
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/rename_item_extension_label"
@@ -32,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_margin"
         android:singleLine="true"
-        android:textCursorDrawable="@null"/>
+        android:textCursorDrawable="@null"
+        android:textSize="@dimen/normal_text_size"/>
 
 </LinearLayout>
