--- a/commons/src/main/res/values/donottranslate.xml
+++ b/commons/src/main/res/values/donottranslate.xml
@@ -1,14 +1,13 @@
 <resources>
     <string name="simple_commons">Simple Commons</string>
     <string name="progress">%1$s / %2$s</string>
-    <string name="empty"> </string>
     <string name="donate_url">http://simplemobiletools.com/donate</string>
     <string name="thank_you_url">https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou</string>
 
     <!-- About -->
     <string name="two_string_placeholder">%1$s%2$s</string>
-    <string name="website">\nhttp://simplemobiletools.com</string>
-    <string name="email">hello@simplemobiletools.com</string>
+    <string name="my_website">\nhttp://simplemobiletools.com</string>
+    <string name="my_email">hello@simplemobiletools.com</string>
 
     <!-- License -->
     <string name="kotlin_text">Copyright 2010 - 2016 JetBrains s.r.o.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttps://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
