simplify recyclerview item size calculation

--- a/commons/src/main/res/layout/filepicker_list_item.xml
+++ b/commons/src/main/res/layout/filepicker_list_item.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:maxLines="3"
+            android:maxLines="1"
             tools:text="Directory"/>
 
         <com.simplemobiletools.commons.views.MyTextView
@@ -40,8 +40,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/list_item_name"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textSize="@dimen/smaller_text_size"
             tools:text="1 KB"/>
     </RelativeLayout>
-
 </RelativeLayout>
