--- a/commons/src/main/res/layout/divider.xml
+++ b/commons/src/main/res/layout/divider.xml
@@ -3,4 +3,4 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="1px"
-    android:background="@color/divider_weak"/>
+    android:background="@color/divider_grey"/>
