reduce the left padding of dialog titles

--- a/commons/src/main/res/layout/dialog_title.xml
+++ b/commons/src/main/res/layout/dialog_title.xml
@@ -5,9 +5,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingEnd="@dimen/activity_margin"
-    android:paddingLeft="@dimen/big_margin"
+    android:paddingLeft="@dimen/activity_margin"
     android:paddingRight="@dimen/activity_margin"
-    android:paddingStart="@dimen/big_margin"
+    android:paddingStart="@dimen/activity_margin"
     android:paddingTop="@dimen/activity_margin"
     android:textSize="@dimen/normal_text_size"
     android:textStyle="bold"/>
