add a Merge option to folder conflict resolution

--- a/commons/src/main/res/layout/dialog_file_conflict.xml
+++ b/commons/src/main/res/layout/dialog_file_conflict.xml
@@ -42,6 +42,15 @@
             android:paddingBottom="@dimen/normal_margin"
             android:paddingTop="@dimen/normal_margin"
             android:text="@string/overwrite"/>
+
+        <com.simplemobiletools.commons.views.MyCompatRadioButton
+            android:id="@+id/conflict_dialog_radio_merge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/normal_margin"
+            android:paddingTop="@dimen/normal_margin"
+            android:text="@string/merge"/>
+
     </RadioGroup>
 
     <com.simplemobiletools.commons.views.MyAppCompatCheckbox
