add Seconds handling at the pick interval dialog

--- a/commons/src/main/res/layout/dialog_custom_interval_picker.xml
+++ b/commons/src/main/res/layout/dialog_custom_interval_picker.xml
@@ -32,6 +32,14 @@
             android:paddingTop="@dimen/activity_margin">
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
+                android:id="@+id/dialog_radio_seconds"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/activity_margin"
+                android:paddingTop="@dimen/activity_margin"
+                android:text="@string/seconds_raw"/>
+
+            <com.simplemobiletools.commons.views.MyCompatRadioButton
                 android:id="@+id/dialog_radio_minutes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
