--- a/commons/src/main/res/values/donottranslate.xml
+++ b/commons/src/main/res/values/donottranslate.xml
@@ -3,6 +3,8 @@
     <string name="progress">%1$s / %2$s</string>
     <string name="donate_url">http://simplemobiletools.com/donate</string>
     <string name="thank_you_url">https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou</string>
+    <string name="a_m">a.m.</string>
+    <string name="p_m">p.m.</string>
 
     <!-- About -->
     <string name="two_string_placeholder">%1$s%2$s</string>
