update website to https

--- a/commons/src/main/res/values/donottranslate.xml
+++ b/commons/src/main/res/values/donottranslate.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="simple_commons">Simple Commons</string>
     <string name="progress">%1$s / %2$s</string>
-    <string name="donate_url">http://simplemobiletools.com/donate</string>
+    <string name="donate_url">https://simplemobiletools.com/donate</string>
     <string name="thank_you_url">https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou</string>
     <string name="a_m">a.m.</string>
     <string name="p_m">p.m.</string>
 
     <!-- About -->
     <string name="two_string_placeholder">%1$s%2$s</string>
-    <string name="my_website">\nhttp://simplemobiletools.com</string>
+    <string name="my_website">\nhttps://simplemobiletools.com</string>
     <string name="my_email">hello@simplemobiletools.com</string>
 
     <!-- License -->
