--- a/commons/src/main/res/layout/dialog_radio_group.xml
+++ b/commons/src/main/res/layout/dialog_radio_group.xml
@@ -9,6 +9,7 @@
         android:id="@+id/dialog_radio_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/normal_margin"
         android:paddingLeft="@dimen/activity_margin"
         android:paddingRight="@dimen/activity_margin"
         android:paddingTop="@dimen/normal_margin"/>
