--- a/commons/src/main/res/layout/dialog_filepicker.xml
+++ b/commons/src/main/res/layout/dialog_filepicker.xml
@@ -9,8 +9,7 @@
     <RelativeLayout
         android:id="@+id/filepicker_holder"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <com.simplemobiletools.commons.views.Breadcrumbs
             android:id="@+id/filepicker_breadcrumbs"
