--- a/commons/src/main/res/layout/activity_customization.xml
+++ b/commons/src/main/res/layout/activity_customization.xml
@@ -136,6 +136,36 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/customization_app_icon_color_holder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/customization_primary_color_holder"
+            android:layout_marginTop="@dimen/medium_margin"
+            android:background="?attr/selectableItemBackground"
+            android:padding="@dimen/activity_margin">
+
+            <com.simplemobiletools.commons.views.MyTextView
+                android:id="@+id/customization_app_icon_color_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:paddingLeft="@dimen/medium_margin"
+                android:paddingRight="@dimen/medium_margin"
+                android:text="@string/app_icon_color"/>
+
+            <ImageView
+                android:id="@+id/customization_app_icon_color"
+                android:layout_width="@dimen/color_sample_size"
+                android:layout_height="@dimen/color_sample_size"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="@dimen/medium_margin"
+                android:layout_marginRight="@dimen/medium_margin"
+                android:clickable="false"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
             android:id="@+id/apply_to_all_holder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
