--- a/commons/src/main/res/values/arrays.xml
+++ b/commons/src/main/res/values/arrays.xml
@@ -18,8 +18,30 @@
         <item>@color/md_orange</item>
         <item>@color/md_deep_orange</item>
         <item>@color/md_brown</item>
-        <item>@color/md_grey</item>
         <item>@color/md_blue_grey</item>
+        <item>@color/md_grey</item>
+    </array>
+
+    <array name="md_app_icon_colors">
+        <item>@color/md_red_700</item>
+        <item>@color/md_pink_700</item>
+        <item>@color/md_purple_700</item>
+        <item>@color/md_deep_purple_700</item>
+        <item>@color/md_indigo_700</item>
+        <item>@color/md_blue_700</item>
+        <item>@color/md_light_blue_700</item>
+        <item>@color/md_cyan_700</item>
+        <item>@color/md_teal_700</item>
+        <item>@color/md_green_700</item>
+        <item>@color/md_light_green_700</item>
+        <item>@color/md_lime_700</item>
+        <item>@color/md_yellow_700</item>
+        <item>@color/md_amber_700</item>
+        <item>@color/md_orange_700</item>
+        <item>@color/md_deep_orange_700</item>
+        <item>@color/md_brown_700</item>
+        <item>@color/md_blue_grey_700</item>
+        <item>@color/md_grey_black</item>
     </array>
 
     <array name="md_ambers">
