--- a/commons/src/main/res/layout/dialog_security.xml
+++ b/commons/src/main/res/layout/dialog_security.xml
@@ -1,39 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/dialog_holder"
-    android:layout_width="wrap_content"
+    android:id="@+id/dialog_scrollview"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/dialog_tab_layout"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:id="@+id/dialog_holder"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <android.support.design.widget.TabItem
-            android:id="@+id/dialog_tab_pattern"
+        <android.support.design.widget.TabLayout
+            android:id="@+id/dialog_tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TabItem
+                android:id="@+id/dialog_tab_pattern"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/pattern"/>
+
+            <android.support.design.widget.TabItem
+                android:id="@+id/dialog_tab_pin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/pin"/>
+
+            <android.support.design.widget.TabItem
+                android:id="@+id/dialog_tab_fingerprint"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/fingerprint"/>
+
+        </android.support.design.widget.TabLayout>
+
+        <com.simplemobiletools.commons.views.MyDialogViewPager
+            android:id="@+id/dialog_tab_view_pager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/pattern"/>
+            android:layout_below="@+id/dialog_tab_layout"/>
 
-        <android.support.design.widget.TabItem
-            android:id="@+id/dialog_tab_pin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/pin"/>
-
-        <android.support.design.widget.TabItem
-            android:id="@+id/dialog_tab_fingerprint"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/fingerprint"/>
-
-    </android.support.design.widget.TabLayout>
-
-    <com.simplemobiletools.commons.views.MyDialogViewPager
-        android:id="@+id/dialog_tab_view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/dialog_tab_layout"/>
-
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
