--- a/commons/src/main/res/layout/dialog_write_permission.xml
+++ b/commons/src/main/res/layout/dialog_write_permission.xml
@@ -17,10 +17,7 @@
     <ImageView
         android:id="@+id/write_permissions_dialog_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:src="@drawable/img_write_storage"/>
+        android:layout_height="wrap_content"/>
 
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/write_permissions_dialog_text_sd"
@@ -33,9 +30,6 @@
     <ImageView
         android:id="@+id/write_permissions_dialog_image_sd"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:src="@drawable/img_write_storage_sd"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
