--- a/commons/src/main/res/layout/dialog_write_permission_otg.xml
+++ b/commons/src/main/res/layout/dialog_write_permission_otg.xml
@@ -17,9 +17,6 @@
     <ImageView
         android:id="@+id/write_permissions_dialog_otg_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:src="@drawable/img_write_storage_otg"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
